added the upload button for mock data uplaoding

--- a/public/test.html
+++ b/public/test.html
@@ -52,6 +52,10 @@
 <body>
 
   <section class="insights_section">
+    <form id="uploadForm" enctype="multipart/form-data">
+      <input type="file" id="dataFile" name="dataFile" accept=".json" required>
+      <button type="button" id="uploadBtn" class="select_formula_button">Upload Data</button>
+    </form>
     <div class="box-container">
       <!-- Boxes will be generated dynamically here -->
     </div>
